Fix scrollbar

--- a/CK2EventsUI/wwwroot/css/site.css
+++ b/CK2EventsUI/wwwroot/css/site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    overflow-y:scroll;
 }
 
 /* Wrapping element */
@@ -88,7 +89,7 @@ textarea {
     margin: auto;
     border: 1px solid #ddd;
     /*height: 680px;*/
-    width: 100%;
+    /* width: 100%; */
     height: 680px;
     /*width: 1000px;*/
     /*overflow: auto !important;*/
